FIX optimized alignment of Dashobard Cards

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -84,3 +84,4 @@ table.jexcel {width: 100%}
 
 /* UI5DashBoard Widget GridContainer layout for columns*/
 .dashboard_gridcontainer_layout {grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)) !important; grid-auto-rows: auto !important;}
+.sapFCardContent > .sapMPanel > .sapMPanelContent {border-bottom: 0 !important}
